ui(mobile) fix headings being cut off screen

--- a/src/components/Markdown/Markdown.scss
+++ b/src/components/Markdown/Markdown.scss
@@ -37,6 +37,7 @@
     line-height: 1.4;
     margin: 1.5em 0 0.25em;
     color: getColor(fiord);
+    word-break: break-all;
 
     tt,
     code {
